--- a/style.css
+++ b/style.css
@@ -42,6 +42,16 @@ header {
 .search-box>input {
     border-top-right-radius: 5px;
     border: none;
+    width: 126px;
+}
+
+.search-box>a {
+    width: 19px;
+    height: 19px;
+    background: url(../images/search_button.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 1px;
 }
 
 ul {
