--- a/style.css
+++ b/style.css
@@ -99,14 +99,14 @@ ul {
     background: linear-gradient(0deg, rgba(144, 144, 144, 1) 85%, rgba(188, 188, 188, 1) 100%);
 }
 
-.sep {
+.menu .sep {
     color: #bcbcbc;
     text-shadow: 1px 1px 1px gray;
     margin: 0 16px;
     padding: 5px 0;
 }
 
-#home a {
+#home {
     padding: 0;
     margin: 0;
     width: 17px;
@@ -131,4 +131,10 @@ ul {
 .logo {
     position: absolute;
     top: 30px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
