add FB link + style fine tuning

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ footer {
 }
 
 header {
-    background: linear-gradient(0deg, rgba(188, 188, 188, 1) 0%, rgba(144, 144, 144, 1) 20%);
+    background: linear-gradient(0deg, rgba(188, 188, 188, 1) 0%, rgba(144, 144, 144, 1) 15%);
 }
 
 .footer-container,
@@ -26,7 +26,8 @@ header {
     width: 900px;
 }
 
-.menu {
+.menu,
+.search-box {
     justify-content: flex-end;
 }
 
@@ -41,8 +42,7 @@ header {
 }
 
 .search-box {
-    padding: 20px 0 15px 0;
-    justify-content: flex-end;
+    padding: 20px 0 12px 0;
 }
 
 .search-box>input {
@@ -110,13 +110,13 @@ ul {
     text-shadow: 1px 1px 1px gray;
     margin: 0 16px;
     padding: 5px 0;
+    font-size: 18px;
 }
 
 #home {
-    padding: 0;
-    margin: 0;
+    /* margin: 0; */
     width: 17px;
-    height: 33px;
+    height: 15px;
     background: url(../images/menu_home_blue.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -136,17 +136,20 @@ ul {
 
 .logo {
     position: absolute;
-    top: 30px;
+    top: 32px;
 }
 
 footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    background: linear-gradient(0deg, rgba(144, 144, 144, 1) 55%, rgba(188, 188, 188, 1) 100%);
 }
 
 .footer-menu {
     color: white;
+    padding: 0 7px;
+    margin: 14px 0 6px 0;
 }
 
 .footer-menu>li>a {
@@ -161,4 +164,21 @@ footer {
 
 .footer-menu>.sep {
     margin: 0 5px;
+    font-weight: 600;
+    font-size: 13px;
+    margin-top: 2px;
+}
+
+#fb-link {
+    display: block;
+    width: 18px;
+    height: 18px;
+    background: url(../images/fb_icon.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.footer-menu li a:hover {
+    text-decoration: underline;
+    color: #005ca0;
 }
