add language link to header

--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ header {
     width: 900px;
 }
 
-.menu,
-.search-box {
+.header-container>.row,
+.menu {
     justify-content: flex-end;
 }
 
@@ -35,13 +35,14 @@ header {
     justify-content: flex-start;
 }
 
+.header-container>.row,
 .menu,
 .search-box,
 .footer-menu {
     display: flex;
 }
 
-.search-box {
+.header-container>.row {
     padding: 20px 0 12px 0;
 }
 
@@ -77,9 +78,19 @@ ul {
     margin-bottom: 10px;
 }
 
-.menu li a:hover {
+.menu li a:hover,
+.footer-menu li a:hover,
+.lang:hover {
     text-decoration: underline;
     color: #005ca0;
+}
+
+.lang {
+    color: white;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 3px 0 0 15px;
 }
 
 
@@ -176,9 +187,4 @@ footer {
     background: url(../images/fb_icon.png);
     background-repeat: no-repeat;
     background-position: center;
-}
-
-.footer-menu li a:hover {
-    text-decoration: underline;
-    color: #005ca0;
 }
