--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ header {
 .footer-menu,
 .main,
 .bg-cards,
-.sm-cards {
+.sm-cards,
+.links-container {
     display: flex;
 }
 
@@ -46,7 +47,8 @@ header {
     justify-content: flex-start;
 }
 
-.main {
+.main,
+.links-container {
     flex-direction: column;
 }
 
@@ -200,11 +202,6 @@ footer {
     flex: 1;
 }
 
-.bg-cards,
-.sm-cards {
-    justify-content: space-between;
-}
-
 .card1 {
     background-image: url(../images/1908364606615453350.jpg);
 }
@@ -251,10 +248,6 @@ footer {
     float: left;
 }
 
-.card-link>img {
-    margin-right: 3px;
-}
-
 .text-container {
     padding: 8px 10px 3px 10px;
     margin: 6px;
@@ -270,10 +263,56 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 292px;
+    width: 291px;
     height: 216px;
 }
 
 .sm-cards {
     margin: 18px 0;
+}
+
+.sm-cards .card-title {
+    color: #575757;
+    padding: 10px 0;
+}
+
+.card4 .card-img,
+.card5 .card-img {
+    padding: 10px 0;
+}
+
+.card-container {
+    padding: 0 24px;
+}
+
+.sm-cards .card-link {
+    font-size: 13px;
+    color: #72716d;
+}
+
+.card4 .card-link,
+.card5 .card-link {
+    float: left;
+    margin-top: 7px;
+}
+
+.card6 .card-link {
+    padding: 3px 0;
+}
+
+.links-container {
+    margin-top: 15px;
+    justify-content: flex-start;
+}
+
+.bg-cards,
+.sm-cards,
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-link>img {
+    float: left;
+    margin: 3px;
 }
