--- a/contactStyle.css
+++ b/contactStyle.css
@@ -56,35 +56,36 @@
     margin-bottom: 20px;
 }
 
-form {
-    background: url(../images/contact_form_bg.png) no-repeat 0 0;
-    width: 383px;
-    height: 356px;
-    margin-top: 10px;
-}
+form {}
 
 .form-wrapper {
+    background: url(../images/contact_form_bg.png) no-repeat 0 10px;
     border-top: 1px solid #cbcbcb;
-    padding-left: 55px;
+    padding-top: 10px;
+    width: 383px;
+    height: 356px;
 }
 
-.contact-cards .card-title {
+.contact-container .card-title {
     font-size: 15px;
     color: #005ca0;
     margin: 0;
     padding: 13px 24px;
 }
 
+.form-text,
 .contact-cards .card-text {
-    padding-right: 24px;
+    padding: 0 24px;
 }
 
+.form-wrapper p,
 .contact-cards .card-text p {
     margin: 0;
     font-size: 13px;
     color: #6d6d6d;
 }
 
+.form-wrapper p:first-of-type,
 .card2>.card-text p,
 .card1>.card-text p:first-child {
     font-weight: bold;
