--- a/contactStyle.css
+++ b/contactStyle.css
@@ -59,9 +59,9 @@ form>div>label,
 }
 
 .form-wrapper {
-    background: url(../images/contact_form_bg.png) no-repeat 0 10px;
+    background: url(../images/contact_form_bg.png) no-repeat 55px 10px;
     border-top: 1px solid #cbcbcb;
-    padding-top: 10px;
+    padding: 10px 0 0 55px;
     width: 383px;
     height: 356px;
 }
@@ -90,6 +90,10 @@ form label,
     color: #6d6d6d;
 }
 
+form>div>label {
+    margin: 3px 0;
+}
+
 .form-wrapper p:first-of-type,
 .card2>.card-text p,
 .card1>.card-text p:first-child {
@@ -109,16 +113,17 @@ form>div {
 
 form textarea {
     color: #6d6d6d;
-    width: 100%;
+    width: 97%;
     height: 100px;
     padding: 3px;
     border: 1px solid #808992;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 form input[type="button"] {
     float: left;
     width: max-content;
-    padding: 1px 8px;
+    padding: 2px 10px;
     font-size: 14px;
     color: white;
     border: 1px solid #dedede;
@@ -133,6 +138,6 @@ form input[type="button"]:hover {
 
 form input {
     width: 160px;
-    padding: 5px;
+    padding: 2px;
     border: 1px solid #808992;
 }
