--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ main {
 .search-box>a {
     width: 19px;
     height: 19px;
-    background: url(../images/search_button.png) no-repeat center;
+    background: url(images/search_button.png) no-repeat center;
     margin-right: 1px;
 }
 
@@ -116,7 +116,7 @@ a:hover {
     width: 17px;
     height: 15px;
     margin: 2px 0;
-    background: url(../images/menu_home_blue.png) no-repeat center;
+    background: url(images/menu_home_blue.png) no-repeat center;
 }
 
 .dropdown>a {
@@ -170,7 +170,7 @@ footer {
     display: block;
     width: 18px;
     height: 18px;
-    background: url(../images/fb_icon.png) no-repeat center;
+    background: url(images/fb_icon.png) no-repeat center;
 }
 
 .cards-container {
@@ -182,15 +182,15 @@ footer {
 }
 
 .bg-cards .card1 {
-    background: url(../images/1908364606615453350.jpg) no-repeat center;
+    background: url(images/1908364606615453350.jpg) no-repeat center;
 }
 
 .bg-cards .card2 {
-    background: url(../images/Picture-046410251500.jpg) no-repeat center;
+    background: url(images/Picture-046410251500.jpg) no-repeat center;
 }
 
 .bg-cards .card3 {
-    background: url(../images/פזקר_-291_354410564000.jpg) no-repeat center;
+    background: url(images/פזקר_-291_354410564000.jpg) no-repeat center;
 }
 
 .bg-cards>[class^="card"] {
@@ -235,13 +235,13 @@ footer {
 .bg-cards .text-container {
     padding: 8px 10px 3px 10px;
     margin: 6px;
-    background: url(../images/hp_tab_text_bg.png) no-repeat center;
+    background: url(images/hp_tab_text_bg.png) no-repeat center;
     background-size: cover;
     width: 230px;
 }
 
 .sm-cards>[class^="card"] {
-    background: url(../images/small_cube_bg.png) no-repeat center;
+    background: url(images/small_cube_bg.png) no-repeat center;
     background-size: cover;
     width: 291px;
     height: 216px;
@@ -282,15 +282,15 @@ footer {
 }
 
 .bg-cards .card-link>i {
-    background: url(../images/read_more_white.png) no-repeat;
+    background: url(images/read_more_white.png) no-repeat;
 }
 
 .sm-cards .card-link>i {
-    background: url(../images/read_more_yellow.png) no-repeat;
+    background: url(images/read_more_yellow.png) no-repeat;
 }
 
 .card-link:hover>i {
-    background: url(../images/read_more_blue.png) no-repeat;
+    background: url(images/read_more_blue.png) no-repeat;
 }
 
 .card-link>i {
