change image extension (for github page)

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ footer {
 }
 
 .bg-cards .card1 {
-    background: url(images/1908364606615453350.jpg) no-repeat center;
+    background: url(images/1908364606615453350.JPG) no-repeat center;
 }
 
 .bg-cards .card2 {
